# Mastermind

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: color.rs  lib.rs  main.rs  peg.rs
